--- a/sass/components/_logo.scss
+++ b/sass/components/_logo.scss
@@ -1,19 +1,20 @@
+.color-logo {
+  color: $color-logo;
+}
+
+.logo--color {
+  color: $color-link;
+}
+
 .logo {
-    margin-right: 93px;
-    font-family: 'Raleway', sans-serif;
-    font-weight: 700;
+  font-family: "Raleway", sans-serif;
+  font-weight: 700;
+  font-size: 24px;
+  line-height: 1.17;
+  text-decoration: none;
+  color: $color-logo;
+
+  @media screen and (min-width: 768px) {
     font-size: 26px;
-    line-height: 1.19;
-  
-    letter-spacing: 0.03em;
-    color: var(--accent-color);
-  
-    &:hover,
-    &:focus {
-      outline: none;
-    }
   }
-  
-  .logo__part {
-    color: var(--black-color);
-  }
+}
