--- a/sass/utils/_variables.scss
+++ b/sass/utils/_variables.scss
@@ -1,37 +1,46 @@
-:root {
-    --accent-color: #2196f3; 
-    --hover-background-color: #188ce8; 
-    --secondary-color: #212121; 
-    --primary-color: #757575; 
-    --white-color: #ffffff; 
-    --border-color: #ececec; 
-    --portfolio-border-color: #eeeeee; 
-    --modal-input-border-color: rgba(33, 33, 33, 0.2);
-    --secondary-background-color: #f5f4fa; 
-    --address-primary-color: rgba(255, 255, 255, 0.6); 
-    --black-color: #000000; 
-    --primary-background-color: #2f303a; 
-    --social-link-color: #afb1b8; 
-    --hero-bg-color: #c4c4c4; 
-    --hero-overlay-color: rgba(47, 48, 58, 0.4);
-    --about-overlay-color: rgba(47, 48, 58, 0.8);
-    --portfolio-overlay-color: rgba(33, 150, 243, 0.9);
-    --modal-overlay-color: rgba(0, 0, 0, 0.2);
-    --close-border-color: rgba(0, 0, 0, 0.1);
-    --email-form-border-color: rgba(255, 255, 255, 0.3);
-  
-    --footer-socials-bg-color: rgba(255, 255, 255, 0.1);
-    --transparent-color: rgba(0, 0, 0, 0);
-  
-    --flex-grid-gap: 30px; 
-  
-    --box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
-      0px 2px 1px rgba(0, 0, 0, 0.2);
-    --portfolio-box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12),
-      0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
-    --button-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1),
-      0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
-  
-    --transition-duration: 250ms;
-    --transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+$color-link: #2196f3;
+$color-button: #188ce8;
+$color-logo: #000000;
+$color-main: #212121;
+$color-secondary: #757575;
+$color-hero: #ffffff;
+$bg-hero: #2f303a;
+$bg-section: #f5f4fa;
+$bg-footer: #2f303a;
+$icon-social: #afb1b8;
+$header-border: #ececec;
+
+body {
+  font-family: "Roboto", sans-serif;
+  line-height: 1.2;
+  background-color: $color-hero;
+}
+
+body.modal-open {
+  overflow: hidden;
+}
+
+img {
+  display: block;
+  max-width: 100%;
+  height: auto;
+}
+
+.container {
+  margin: 0 auto;
+  padding-left: 15px;
+  padding-right: 15px;
+  min-width: 320px;
+
+  @media screen and (min-width: 480px) {
+    width: 480px;
   }
+
+  @media screen and (min-width: 768px) {
+    width: 768px;
+  }
+
+  @media screen and (min-width: 1200px) {
+    width: 1200px;
+  }
+}
