--- a/css/main.css
+++ b/css/main.css
@@ -229,7 +229,8 @@ img {
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.contacts-list__link:hover .contacts-list__icon {
+.contacts-list__link:hover .contacts-list__icon,
+.contacts-list__link:focus .contacts-list__icon {
   fill: #2196f3;
 }
 
@@ -1044,11 +1045,11 @@ img {
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.social__link:hover {
+.social__link:hover, .social__link:focus {
   background-color: #2196f3;
 }
 
-.social__link:hover .social__icon {
+.social__link:hover .social__icon, .social__link:focus .social__icon {
   fill: #ffffff;
 }
 
@@ -1116,11 +1117,11 @@ img {
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.clients__link:hover {
+.clients__link:hover, .clients__link:focus {
   border: 1px solid #2196f3;
 }
 
-.clients__link:hover > svg {
+.clients__link:hover > svg, .clients__link:focus > svg {
   fill: #2196f3;
 }
 
@@ -1197,8 +1198,16 @@ img {
   color: rgba(255, 255, 255, 0.6);
 }
 
+.address__link:hover, .address__link:focus {
+  color: #2196f3;
+}
+
 .address__item:not(:last-of-type) {
   margin-bottom: 9px;
+}
+
+.address__item:not(:last-of-type):hover, .address__item:not(:last-of-type):focus {
+  color: #2196f3;
 }
 
 .footer__address {
@@ -1263,7 +1272,7 @@ img {
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.join__link:hover {
+.join__link:hover, .join__link:focus {
   background-color: #2196f3;
 }
 
