--- a/sass/components/_clients.scss
+++ b/sass/components/_clients.scss
@@ -50,7 +50,8 @@
     transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
   }
 
-  &:hover {
+  &:hover,
+  &:focus {
     border: 1px solid $color-link;
 
     & > svg {
