--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -34,10 +34,20 @@
 .address__link {
   text-decoration: none;
   color: rgba(255, 255, 255, 0.6);
+
+  &:hover,
+  &:focus {
+    color: $color-link;
+  }
 }
 
 .address__item:not(:last-of-type) {
   margin-bottom: 9px;
+
+  &:hover,
+  &:focus {
+    color: $color-link;
+  }
 }
 
 .footer__address {
@@ -95,7 +105,8 @@
   border-radius: 50%;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
-  &:hover {
+  &:hover,
+  &:focus {
     background-color: $color-link;
   }
 }
