--- a/sass/components/_teams.scss
+++ b/sass/components/_teams.scss
@@ -127,7 +127,8 @@
   border-radius: 50%;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
-  &:hover {
+  &:hover,
+  &:focus {
     background-color: $color-link;
 
     .social__icon {
