--- a/sass/components/_advantages.scss
+++ b/sass/components/_advantages.scss
@@ -69,6 +69,7 @@
 }
 
 .advantages__subtitle {
+  text-align: center;
   font-weight: 700;
   font-size: 14px;
   line-height: 1.14;
@@ -78,8 +79,8 @@
   margin-bottom: 10px;
   color: $color-main;
 
-  @media screen and (max-width: 480px) {
-    text-align: center;
+  @media screen and (min-width: 768px) {
+    text-align: unset;
   }
 }
 
