--- a/css/main.css
+++ b/css/main.css
@@ -351,7 +351,6 @@ img {
   padding: 0;
   margin: 0 0 0 -10px;
   flex-wrap: wrap;
-  justify-content: center;
 }
 
 .mobile-social__list {
@@ -807,6 +806,7 @@ img {
 }
 
 .advantages__subtitle {
+  text-align: center;
   font-weight: 700;
   font-size: 14px;
   line-height: 1.14;
@@ -817,9 +817,9 @@ img {
   color: #212121;
 }
 
-@media screen and (max-width: 480px) {
+@media screen and (min-width: 768px) {
   .advantages__subtitle {
-    text-align: center;
+    text-align: unset;
   }
 }
 
