--- a/css/main.css
+++ b/css/main.css
@@ -1408,8 +1408,8 @@ img {
   text-align: center;
   letter-spacing: 0.03em;
   padding: 6px 22px;
-  border: 0px solid transparent;
-  outline: transparent;
+  border: none;
+  cursor: pointer;
   border-radius: 4px;
   background-color: #f5f4fa;
   color: #212121;
@@ -1417,7 +1417,6 @@ img {
 }
 
 .filter__button:hover, .filter__button:focus {
-  cursor: pointer;
   background-color: #2196f3;
   color: #ffffff;
   box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
