--- a/sass/components/_filter.scss
+++ b/sass/components/_filter.scss
@@ -34,7 +34,7 @@
   margin-bottom: 50px;
 
   @media screen and (max-width: 480px) {
-    justify-content: left;
+    justify-content: flex-start;
   }
 
   @media screen and (max-width: 768px) {
