--- a/css/main.css
+++ b/css/main.css
@@ -495,24 +495,8 @@ img {
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
   padding: 40px;
-}
-
-@media screen and (min-width: 768px) {
-  .modal {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%) scale(1);
-    width: 450px;
-    z-index: 3;
-    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  }
-}
-
-@media screen and (min-width: 1200px) {
-  .modal {
-    width: 528px;
-  }
+  width: 400px;
+  margin: 0 auto;
 }
 
 .modal__btn {
@@ -1418,8 +1402,8 @@ img {
 
 .filter__button:hover, .filter__button:focus {
   cursor: pointer;
-  background-color: #2196f3;
   color: #ffffff;
+  background-color: #2196f3;
   box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
 }
 
@@ -1430,18 +1414,12 @@ img {
   list-style: none;
   margin: 0;
   padding-left: 0;
-  margin-bottom: 50px;
+  margin-bottom: 30px;
 }
 
 @media screen and (max-width: 480px) {
   .filter__list {
     justify-content: flex-start;
-  }
-}
-
-@media screen and (max-width: 768px) {
-  .filter__list {
-    margin-bottom: 30px;
   }
 }
 
