--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -31,21 +31,27 @@
     0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
   padding: 40px;
+  width: 400px;
+  margin: 0 auto;
+  // @media screen and (min-width: 768px) {
+  //   position: absolute;
+  //   top: 50%;
+  //   left: 50%;
 
-  @media screen and (min-width: 768px) {
-    position: absolute;
-    top: 50%;
-    left: 50%;
+  //   transform: translate(-50%, -50%) scale(1);
+  //   width: 450px;
+  //   z-index: 3;
+  //   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  // }
 
-    transform: translate(-50%, -50%) scale(1);
-    width: 450px;
-    z-index: 3;
-    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  }
+  // @media screen and (min-width: 1200px) {
+  //   width: 528px;
+  // }
 
-  @media screen and (min-width: 1200px) {
-    width: 528px;
-  }
+  // @media screen and (max-width: 768px) {
+  //   width: 80%;
+  //   margin: 0 auto;
+  // }
 }
 
 .modal__btn {
