--- a/css/main.css
+++ b/css/main.css
@@ -490,13 +490,20 @@ img {
 }
 
 .modal {
-  position: relative;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
   background-color: #ffffff;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
   padding: 40px;
-  width: 400px;
+  max-width: 600px;
   margin: 0 auto;
+}
+
+.modal textarea {
+  height: auto;
 }
 
 .modal__btn {
