--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -25,13 +25,16 @@
 }
 
 .modal {
-  position: relative;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
   background-color: $color-hero;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
   padding: 40px;
-  width: 400px;
+  max-width: 600px;
   margin: 0 auto;
   // @media screen and (min-width: 768px) {
   //   position: absolute;
@@ -52,6 +55,10 @@
   //   width: 80%;
   //   margin: 0 auto;
   // }
+}
+
+.modal textarea {
+  height: auto;
 }
 
 .modal__btn {
