--- a/sass/components/_portfolio.scss
+++ b/sass/components/_portfolio.scss
@@ -1,6 +1,6 @@
 .portfolio {
-  padding-top: 60px;
-  padding-bottom: 60px;
+  padding-top: 45px;
+  padding-bottom: 30px;
   margin: 0;
 
   @media screen and (min-width: 1200px) {
@@ -40,7 +40,7 @@
 .portfolio__list {
   list-style: none;
   margin: 0;
-  padding-left: 0;
+  padding: 0;
 }
 
 .portfolio__cont {
