--- a/css/main.css
+++ b/css/main.css
@@ -914,8 +914,8 @@ img {
 }
 
 .teams {
-  padding-top: 60px;
-  padding-bottom: 60px;
+  padding-top: 50px;
+  padding-bottom: 30px;
   background-color: #f5f4fa;
 }
 
@@ -1051,7 +1051,7 @@ img {
 
 .clients {
   padding-top: 60px;
-  padding-bottom: 60px;
+  padding-bottom: 30px;
 }
 
 @media screen and (min-width: 1200px) {
@@ -1395,58 +1395,55 @@ img {
   font-family: "Roboto", sans-serif;
   font-weight: 500;
   font-size: 16px;
-  line-height: 1.63;
+  line-height: 1.62;
   text-align: center;
-  letter-spacing: 0.03em;
+  border: none;
+  cursor: pointer;
   padding: 6px 22px;
-  border: 0px solid transparent;
-  outline: transparent;
   border-radius: 4px;
-  background-color: #f5f4fa;
-  color: #212121;
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1), color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  margin: 0;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), color 250ms cubic-bezier(0.4, 0, 0.2, 1), box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.filter__button:hover, .filter__button:focus {
-  cursor: pointer;
+.filter__button:focus, .filter__button:hover {
   color: #ffffff;
-  background-color: #2196f3;
-  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
+  background-color: #188ce8;
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
 }
 
 .filter__list {
   display: flex;
-  justify-content: center;
   flex-wrap: wrap;
-  list-style: none;
-  margin: 0;
+  list-style-type: none;
+  margin-left: 0;
   padding-left: 0;
-  margin-bottom: 30px;
+  margin-bottom: 25px;
 }
 
-@media screen and (max-width: 480px) {
+.filter__list .filter__button.current {
+  background-color: #188ce8;
+  color: #ffffff;
+}
+
+@media screen and (min-width: 768px) {
   .filter__list {
-    justify-content: flex-start;
+    margin-bottom: 30px;
+    justify-content: center;
   }
 }
 
-.filer__items {
+.filter__items {
+  margin-bottom: 15px;
+}
+
+.filter__items:not(:last-child) {
   margin-right: 8px;
 }
 
-@media screen and (max-width: 480px) {
-  .filer__items:nth-child(-n + 3) {
-    margin-bottom: 15px;
-  }
-}
-
-.filer__items:last-child {
-  margin-right: 0;
-}
-
 .portfolio {
-  padding-top: 60px;
-  padding-bottom: 60px;
+  padding-top: 45px;
+  padding-bottom: 30px;
+  margin: 0;
 }
 
 @media screen and (min-width: 1200px) {
@@ -1487,7 +1484,7 @@ img {
 .portfolio__list {
   list-style: none;
   margin: 0;
-  padding-left: 0;
+  padding: 0;
 }
 
 .portfolio__cont {
