--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -33,9 +33,13 @@
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
+  width: fit-content;
   padding: 40px;
-  max-width: 600px;
   margin: 0 auto;
+
+  @media screen and (max-width: 1200px) {
+    max-width: 450px;
+  }
 }
 
 .modal textarea {
